namespace AutoAuction.Domain.Entities;

public class Favorite
{
    public int Id { get; set; }
    public string UserId { get; set; } = string.Empty;
    public int AuctionId { get; set; }
    public Auction? Auction { get; set; }
    public DateTime CreatedAt { get; set; } = DateTime.UtcNow;
}
